fix csl spacing issue. fix submit button width issue

--- a/styles/app.css
+++ b/styles/app.css
@@ -154,6 +154,7 @@ input[type=submit] {
   border: 0px;
   border-radius: 3px;
   color: #ffffff;
+  min-width: 113px;
   padding: 10px;
   width: 100%;
 }
